# BOT

./: .env.bak.20260422_233250  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AI_ACTIVATION_DEMO.md  AI_AUDIT_ACTIVATED.txt  AI_AUDIT_GUIDE.md  AI_AUDIT_READY_NOTICE.txt  AI_AUDIT_RESULTS.py  AI_AUDIT_TOOLS_NOTICE.txt  AI_CONVERSATIONS_SUMMARY.md  AI_EXECUTE_NOW.py  AI_EXEC_INSTRUCTION.txt  AI_MEMBER_COMMUNICATION_ENABLED.md  AI_RANDOM_MEMBER_TAGGING_SUCCESS.md  AI_REAL_OPS_MEMBER_TAGGING_SUCCESS.md  AI_TRADING_ASSISTANT_ROLE.md  AUDIT_TOOLS_AVAILABLE.md  AUTONOMOUS_AI_COMMUNICATION.md  AUTO_AUDIT_TRIGGER.py  DIRECT_COMMUNICATION_SUCCESS.md  FREE_MODEL_ROTATION_SOLVED.md  FULL_CODE_MASTER_AUDIT.md  HOW_TO_FETCH_ALL_GROUP_MEMBERS.md  IDENTITY.md  INSTALLATION-CONDA.md  MANDATORY_AUDIT_CHECK.py  MEMORY.md  ML_ENGINE_BLUEPRINT.md  MULTI_TIMEFRAME_ML_DOCUMENTATION.md  NOWPAYMENTS_SETUP.md  OPENCLAW_IMPLEMENTATION.md  OPS_AUTONOMOUS_COMMUNICATION.md  OPS_CHAT_SUMMARY.md  README.md  REAL_DATA_SUMMARY.md  REVERSE_HUNT_BLUEPRINT.md  RTX_3090_CUDA_SETUP.md  RUN_AUDIT_NOW.py  (+200 more)
.openclaw/: workspace-state.json
.token-savior-venv/: pyvenv.cfg
UPGRADES/: 01_2026-04-19_long-bias-fix.md  02_2026-04-19_ml-phase2-missing-features.md  03_2026-04-19_ml-phase3-focal-loss-atr-weights.md  04_2026-04-19_ml-phase4-meta-labeler.md  05_2026-04-19_ml-phase5-regime-routing.md  README.md  (+2 more)
aladdin_core/: Cargo.toml  build_log.txt  pyproject.toml
aladdin_core/python/aladdin_core/: __init__.py
aladdin_core/python/tests/: test_all.py
aladdin_core/src/: lib.rs
dashboard/: admin.html  (+37 more)
(+177 files in other folders)
