[package]
name = "aladdin_core"
version = "0.2.0"
edition = "2021"

[lib]
name = "aladdin_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
